Atualização string de conexão

--- a/src/interview/interview/appsettings.json
+++ b/src/interview/interview/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyConnection": "Data Source=tcp:pucinterviewdbserver.database.windows.net,1433;Initial Catalog=interview_db;User Id=projectadm@pucinterviewdbserver;Password=Puc142536"
+    "MyConnection": "mysql -hcontainers-us-west-209.railway.app -uroot -pTqIg4APOligoQMm53YFG --port 6092 --protocol=TCP railway"
   }
   }
