Adiciona configurações de conexão para MySQL
- Adiciona variáveis de configuração
- Adiciona Pacotes necessários

--- a/src/interview/interview/appsettings.json
+++ b/src/interview/interview/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyConnection": "mysql -hcontainers-us-west-209.railway.app -uroot -pTqIg4APOligoQMm53YFG --port 6092 --protocol=TCP railway"
+    //"MyConnection": "mysql -hcontainers-us-west-209.railway.app -uroot -pTqIg4APOligoQMm53YFG --port 6092 --protocol=TCP railway",
+    "MyConnection": "server=localhost;database=frontEndInterview;user=root;password="
   }
   }
