--- a/src/interview/interview/appsettings.json
+++ b/src/interview/interview/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"MyConnection": "mysql -hcontainers-us-west-209.railway.app -uroot -pTqIg4APOligoQMm53YFG --port 6092 --protocol=TCP railway",
-    "MyConnection": "server=localhost;database=frontEndInterview;user=root;password="
+    "MyConnection": "server=localhost;database=frontEndInterview;user=root;password=root"
   }
   }
