Foi feita a conexão com banco de dados sql do Azure. Pode ser necessario atualizar codigos sql. Um usuario adm padrão foi cadastrado

--- a/src/interview/interview/appsettings.Development.json
+++ b/src/interview/interview/appsettings.Development.json
@@ -3,6 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ConnectionStrings": {
+      "MyConnection": "Data Source=DESKTOP-N1TAL53;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
     }
   }
 }
