--- a/src/interview/interview/appsettings.json
+++ b/src/interview/interview/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"MyConnection": "mysql -hcontainers-us-west-209.railway.app -uroot -pTqIg4APOligoQMm53YFG --port 6092 --protocol=TCP railway",
-    "MyConnection": "server=localhost;database=frontEndInterview;user=root;password=root"
+    "MyConnection": "Data Source=tcp:pucinterview-dbserver.database.windows.net,1433;Initial Catalog=interview_db;User Id=projectadm@pucinterview-dbserver;Password=Puc142536"
   }
-  }
+
+}
